feat/19-implement-groups-in-hub (#18)
* add game hub groups

* show error to group members when game is null

* reformat whole solution

* format code

---------

Co-authored-by: Jwan Khalaf <jkhalaf@cxconsulting.co.uk>

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -25,7 +25,7 @@
 
   private void StartGame()
   {
-    string gameCode = Guid.NewGuid().ToString("n")[..6];
+    var gameCode = Guid.NewGuid().ToString("n")[..6];
 
     Navigation.NavigateTo($"/game/{gameCode}", new NavigationOptions
     {
