--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -34,6 +34,17 @@
         <LoserScreen Loser="@_host"/>
       }
     }
+    else if (_host is {HasTurn: false } && _guest is {HasTurn: false })
+    {
+      if (_host.ConnectionId == _clientConnectionId)
+      {
+        <DrawScreen Player="@_host"/>
+      }
+      else
+      {
+        <DrawScreen Player="@_guest"/>
+      }
+    }
     else
     {
       <div class="flex justify-center gap-9 pb-6">
