add ability for user to specify their name

--- a/UI/Components/GameCode.razor
+++ b/UI/Components/GameCode.razor
@@ -1,8 +1,29 @@
-<div class="mb-8 border rounded-lg border-white p-2.5 bg-slate-900">
-  <h3 class="text-6xl text-amber-400 font-bold text-center tracking-widest uppercase">@GameShareCode</h3>
+<h1 class="font-['Pacifico'] text-5xl focus:outline-none text-center mb-12">
+  <span class="text-[#d877aa]">Share</span> <span class="text-[#f59771]">Code</span>
+</h1>
+
+<div class="flex flex-col mb-4">
+  <label class="font-['Quicksand'] text-slate-200 mb-1.5 font-semibold" for="game-code">Unique Game Code</label>
+
+  <input
+    class="text-6xl text-amber-400 bg-slate-900 font-bold rounded py-2 px-6 tracking-widest uppercase focus:border-amber-500 focus:ring-amber-500 focus:shadow-none"
+    type="text"
+    id="game-code"
+    value="@GameShareCode"
+    readonly="readonly"/>
 </div>
 
-<h4 class="font-['Quicksand'] text-slate-200 text-center mb-16">Share code with the other player</h4>
+<div class="flex flex-col mb-4">
+  <label class="font-['Quicksand'] text-slate-200 mb-1.5 font-semibold" for="player-name">Your name</label>
+
+  <input
+    class="text-6xl text-amber-400 bg-slate-900 font-bold rounded py-2 px-6 tracking-widest focus:border-amber-500 focus:ring-amber-500 focus:shadow-none"
+    type="text"
+    id="player-name"
+    @oninput="e => HandlePlayerNameChange(e.Value?.ToString())"/>
+</div>
+
+<h4 class="font-['Quicksand'] text-slate-400 mb-16">Leave blank for a randomly generated name</h4>
 
 <div class="flex flex-col gap-8 items-center">
   <div class="flex gap-4">
@@ -29,4 +50,12 @@
 {
   [Parameter]
   public required string GameShareCode { get; set; }
+
+  [Parameter]
+  public EventCallback<string?> OnNameInputFunction { get; set; }
+
+  private void HandlePlayerNameChange(string? name)
+  {
+    OnNameInputFunction.InvokeAsync(name);
+  }
 }
