--- a/UI/Shared/PlayerCard.razor
+++ b/UI/Shared/PlayerCard.razor
@@ -1,14 +1,12 @@
 @using UI.Models
 @using UI.Enums
 <div class="grid justify-items-center mb-5">
-  <div class="bg-slate-700 w-28 h-48 grid content-between justify-items-center justify-center rounded-xl p-1 mb-3 @GetActiveStateCssClasses()">
+  <div class="bg-slate-700 w-28 h-48 grid content-between justify-items-center justify-center rounded-xl p-2 mb-3 @GetActiveStateCssClasses()">
     <div class="rounded-full min-w-ful h-20 w-20 max-w-max mx-2">
-      <img src="@Player.ImageUrl" alt="@Player.Name's photo"/>
+      <img src="@Player.ImageUrl" alt="@Player.Name's photo" class="rounded-full"/>
     </div>
 
-    <div class="grid content-center text font-semibold w-12 h-9 max-w-max">
-      <h1 class="font-['Quicksand'] text-slate-200 text-center outline-0">@Player.Name</h1>
-    </div>
+    <h1 class="font-['Quicksand'] text-slate-200 text-center outline-0 font-semibold">@Player.Name</h1>
 
     <div class="max-w-full max-h-full h-12 w-8 text-center flex items-center justify-center">
       @if (Player.Mark == Marks.X)
