--- a/UI/Pages/JoinGame.razor
+++ b/UI/Pages/JoinGame.razor
@@ -3,21 +3,35 @@
 @inject NavigationManager Navigation
 @using Microsoft.AspNetCore.SignalR.Client
 
-<div class="font-['Quicksand'] flex flex-col text-white m-20 align-center justify-between h-1/2">
-  <div class="flex flex-col">
-    <label for="game-code">
-      Enter game code
-    </label>
-    <input id="game-code" maxlength="6" type="text" @bind="GameCode" placeholder="X698L3" class="uppercase rounded-xl p-6 mt-4 text-3xl text-slate-800 text-center"/>
-  </div>
-  <div>
-    <a @onclick="@Start" @onclick:preventDefault="true" class="w-full inline-block font-['Quicksand'] text-xl text-center text-slate-200 p-2 border border-white rounded-r-full rounded-l-full cursor-pointer">Join Game</a>
-  </div>
+<h1 class="font-['Pacifico'] text-5xl focus:outline-none text-center mb-12">
+  <span class="text-[#d877aa]">Join</span> <span class="text-[#f59771]">Game</span>
+</h1>
+
+<div class="flex flex-col mb-4">
+  <label class="font-['Quicksand'] text-slate-200 mb-1.5 font-semibold" for="game-code">Enter game code</label>
+
+  <input
+    class="text-6xl text-amber-400 bg-slate-900 font-bold rounded py-2 px-6 tracking-widest uppercase focus:border-amber-500 focus:ring-amber-500 focus:shadow-none"
+    type="text"
+    id="game-code"
+    maxlength="6"
+    @bind="GameCode"/>
 </div>
+
+
+<div class="font-['Quicksand'] flex flex-col text-white m-20 align-center justify-between h-1/2">
+  <a
+    @onclick="@Start"
+    @onclick:preventDefault="true"
+    class="w-full inline-block font-['Quicksand'] text-xl text-center text-slate-200 p-2 border border-white rounded-r-full rounded-l-full cursor-pointer">
+    Join Game
+  </a>
+</div>
+
 <h3 class="text-3xl text-red-400 text-center">@GameStatusMessage</h3>
 
 @code {
-  
+
   private string GameCode { get; set; } = string.Empty;
   private HubConnection? _hubConnection;
   private string GameStatusMessage { get; set; } = string.Empty;
@@ -27,7 +41,7 @@
     _hubConnection = new HubConnectionBuilder()
       .WithUrl(Navigation.ToAbsoluteUri("/gamehub/checkinggamecode"))
       .Build();
-    
+
     _hubConnection.On<string>("CheckGame", gameStatus =>
     {
       switch (gameStatus)
@@ -41,12 +55,12 @@
         case "WrongCode":
           GameStatusMessage = "Oops, wrong code";
           break;
-          case "NotAllowed":
-            Navigation.NavigateTo($"/ErrorPage", new NavigationOptions
-            {
-              HistoryEntryState = "Navigation state"
-            });
-            break;
+        case "NotAllowed":
+          Navigation.NavigateTo($"/ErrorPage", new NavigationOptions
+          {
+            HistoryEntryState = "Navigation state"
+          });
+          break;
         default:
           GameStatusMessage = "";
           break;
@@ -54,7 +68,7 @@
 
       InvokeAsync(StateHasChanged);
     });
-    
+
     await _hubConnection.StartAsync();
   }
 
