--- a/UI/Components/LoserScreen.razor
+++ b/UI/Components/LoserScreen.razor
@@ -14,12 +14,14 @@
   <h1 class="font-['Quicksand'] text-center text-slate-200 text-3xl font-medium mt-8 font-semibold">Oh! You've lost</h1>
 
   <h2 class="font-['Quicksand'] text-rose-600 text-center text-xl font-medium mt-4 font-semibold">Sorry @Loser.Name</h2>
-  <RestartButton />
+  <RestartButton RestartGame="@RestartGame" />
 </div>
 
 @code {
 
   [Parameter]
   public required Player Loser { get; set; }
-
+  
+  [Parameter]
+  public EventCallback RestartGame { get; set; }
 }
