--- a/UI/Components/RestartButton.razor
+++ b/UI/Components/RestartButton.razor
@@ -1,6 +1,7 @@
 
-<button class="font-['Quicksand'] text-xl text-center text-slate-200 p-2 w-full border border-white rounded-r-full rounded-l-full cursor-pointer">Restart Game</button>
+<button onclick="@RestartGame" class="font-['Quicksand'] mt-4 text-xl text-center text-slate-200 p-2 w-full border border-white rounded-r-full rounded-l-full cursor-pointer">Restart Game</button>
 
 @code {
-
+  [Parameter]
+  public EventCallback RestartGame { get; set; }
 }
