give first turn to other player on game restart

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -25,7 +25,7 @@
 
   private void StartGame()
   {
-    var gameCode = Guid.NewGuid().ToString("n")[..6];
+    string gameCode = Guid.NewGuid().ToString("n")[..6];
 
     Navigation.NavigateTo($"/game/{gameCode}", new NavigationOptions
     {
