feat/23-play-again-button-after-match-end (#24)
* create restart game component and restart game method

* create restart game method on client side

* randomize players start turn after game restart

* change restart game component name and text to play again

* give first turn to other player on game restart

---------

Co-authored-by: Jwan Khalaf <jkhalaf@cxconsulting.co.uk>

--- a/UI/Components/DrawScreen.razor
+++ b/UI/Components/DrawScreen.razor
@@ -12,14 +12,16 @@
   <h1 class="font-['Quicksand'] text-center text-slate-200 text-3xl font-medium mt-8 font-semibold">It's a draw!</h1>
 
   <div class="flex flex-col self-stretch mt-8">
-    <a class="font-['Quicksand'] text-xl text-center text-slate-200 p-2 w-full border border-white rounded-r-full rounded-l-full cursor-pointer">Restart Game</a>
+    <PlayAgainButton RestartGame="@RestartGame"/>
   </div>
-
 </div>
 
 @code {
 
   [Parameter]
   public required Player Player { get; set; }
+
+  [Parameter]
+  public EventCallback RestartGame { get; set; }
 
 }
