--- a/UI/Components/WinnerScreen.razor
+++ b/UI/Components/WinnerScreen.razor
@@ -19,11 +19,16 @@
   <h1 class="font-['Quicksand'] text-center text-slate-200 text-3xl font-medium mt-8 font-semibold">Congratulations!</h1>
 
   <h2 class="font-['Quicksand'] text-amber-400 text-center text-xl font-medium mt-4 font-semibold">You Win</h2>
+
+  <PlayAgainButton RestartGame="@RestartGame"/>
 </div>
 
 @code {
 
   [Parameter]
   public required Player Winner { get; set; }
+
+  [Parameter]
+  public EventCallback RestartGame { get; set; }
 
 }
