--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -10,7 +10,7 @@
 
 <PageTitle>TicTacGo Game</PageTitle>
 
-<div class="pt-20">
+<div class="h-full">
   @if (_gameCanStart)
   {
     @if (_host is {HasWon: true })
@@ -54,7 +54,7 @@
           <label class="font-['Quicksand'] text-slate-200 mb-1.5 font-semibold" for="player-name">Your name</label>
 
           <input
-            class="text-6xl text-amber-400 bg-slate-900 font-bold rounded py-2 px-6 tracking-widest focus:border-amber-500 focus:ring-amber-500 focus:shadow-none"
+            class="text-4xl text-amber-400 bg-slate-900 font-bold rounded py-2 px-6 tracking-widest focus:border-amber-500 focus:ring-amber-500 focus:shadow-none"
             type="text"
             id="player-name"
             @bind="_joinerName"/>
@@ -66,17 +66,19 @@
       }
       else
       {
-        <div class="flex justify-center gap-9 pb-6">
-          <PlayerCard Player="@_host" ClientConnectionId="@_clientConnectionId"/>
+        <div class="h-full pb-8 flex flex-col justify-between">
+          <div class="flex justify-center gap-9">
+            <PlayerCard Player="@_host" ClientConnectionId="@_clientConnectionId"/>
 
-          <PlayerCard Player="@_guest" ClientConnectionId="@_clientConnectionId"/>
+            <PlayerCard Player="@_guest" ClientConnectionId="@_clientConnectionId"/>
+          </div>
+
+          <GameGrid
+            GridCells="@_gameBoard"
+            ActiveMark="@_activeMark"
+            OnClickFunction="@MakeMove"
+            CanMakeMove="@CanMakeMove()"/>
         </div>
-
-        <GameGrid
-          GridCells="@_gameBoard"
-          ActiveMark="@_activeMark"
-          OnClickFunction="@MakeMove"
-          CanMakeMove="@CanMakeMove()"/>
       }
     }
   }
