--- a/UI/Shared/GameGrid.razor
+++ b/UI/Shared/GameGrid.razor
@@ -1,25 +1,26 @@
 @using UI.Enums
 @using UI.Models
-
-<div class="bg-slate-600 grid grid-cols-3 grid-rows-3 gap-2 h-80 w-80 m-auto mb-2 p-2 rounded-lg">
-  @if (GridCells is not null)
-  {
-    @for (int i = 0; i < GridCells.Length; i++)
+<div class="flex justify-center items-center h-full w-full">
+  <div class="bg-slate-600 grid grid-cols-3 grid-rows-3 gap-2 w-72 h-72 sm:w-80 sm:h-80 mb-2 p-2 rounded-lg">
+    @if (GridCells is not null)
     {
-      Marks cell = GridCells[i];
-      int index = i;
-      <button @onclick="() => PlaceMark(cell, index)" class="bg-slate-800 rounded-lg @(CanMakeMove ? "cursor-pointer" : "cursor-not-allowed") flex active:bg-slate-700 items-center justify-center">
-        @if (cell == Marks.X)
-        {
-          <img src="icons/x.svg" class="w-1/2" alt="X mark"/>
-        }
-        else if (cell == Marks.O)
-        {
-          <img src="icons/o.svg" class="w-3/5" alt="O mark"/>
-        }
-      </button>
+      @for (int i = 0; i < GridCells.Length; i++)
+      {
+        Marks cell = GridCells[i];
+        int index = i;
+        <button @onclick="() => PlaceMark(cell, index)" class="bg-slate-800 rounded-lg @(CanMakeMove ? "cursor-pointer" : "cursor-not-allowed") flex active:bg-slate-700 items-center justify-center">
+          @if (cell == Marks.X)
+          {
+            <img src="icons/x.svg" class="w-1/2" alt="X mark"/>
+          }
+          else if (cell == Marks.O)
+          {
+            <img src="icons/o.svg" class="w-3/5" alt="O mark"/>
+          }
+        </button>
+      }
     }
-  }
+  </div>
 </div>
 
 @code {
