--- a/UI/Pages/ErrorPage.razor
+++ b/UI/Pages/ErrorPage.razor
@@ -2,6 +2,8 @@
 
 @inject NavigationManager Navigation
 
+<PageTitle>TicTacGo | Error</PageTitle>
+
 <div class="font-['Quicksand'] flex flex-col text-white align-center justify-between h-1/2">
   <h1 class="pt-20 text-3xl text-red-400 text-center outline-0">Game Not Found</h1>
 
