--- a/UI/Shared/MainLayout.razor
+++ b/UI/Shared/MainLayout.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>UI</PageTitle>
 
-<main class="p-8 h-full bg-main-pattern bg-cover">
+<main class="p-8 h-screen bg-main-pattern bg-cover overflow-auto">
   @Body
 </main>
