--- a/UI/Pages/_Host.cshtml
+++ b/UI/Pages/_Host.cshtml
@@ -4,7 +4,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
-<html class="h-full" lang="en">
+<html class="h-screen" lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -15,7 +15,7 @@
   <title>TicTacGo</title>
 </head>
 
-<body class="h-full">
+<body class="h-screen">
 <component type="typeof(App)" render-mode="Server"/>
 
 <div id="blazor-error-ui">
